--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.11",
+    "@types/pg": "^8.11.6",
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "@prisma/client": "^5.13.0",
+    "dotenv": "^16.4.5",
+    "env-var": "^7.4.2",
+    "express": "^4.19.2",
+    "pg": "^8.11.5"
   }
 }
