--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,5 @@ POSTGRES_USER=root
 POSTGRES_DB=inventory
 POSTGRES_PORT=5432
 POSTGRES_PASSWORD=root
+
+JWT_SEED=semillaP4PuEpicaE.stoE_sMuyEpekwejfkwejfeopf308452_34h5re2lnkr23opr234@$@_4oj23hb4r2eknrs
