--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.11",
     "@types/pg": "^8.11.6",
+    "@types/uuid": "^9.0.8",
     "nodemon": "^3.1.0",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
@@ -22,9 +25,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "env-var": "^7.4.2",
     "express": "^4.19.2",
-    "pg": "^8.11.5"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.5",
+    "uuid": "^9.0.1"
   }
 }
