--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "rimraf ./dist && tsc",
     "start": "npm run build && node dist/app.js"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
